// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpansibleScatterRow should render categories corretly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="expansible-scatter-row hidden"
>
     
    <ScatterRow
        data={Array []}
        domain={
            Object {
                "x": Array [
                  1800,
                  2020,
                ],
              }
        }
        hidden={true}
        title={undefined}
    />
     
</div>,
  "nodes": Array [
    <div
      className="expansible-scatter-row hidden"
>
       
      <ScatterRow
            data={Array []}
            domain={
                  Object {
                        "x": Array [
                          1800,
                          2020,
                        ],
                      }
            }
            hidden={true}
            title={undefined}
      />
       
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <ExpansibleScatterRow
        data={
                Object {
                        "active": false,
                        "array": Array [],
                        "division": Object {},
                      }
        }
        domain={
                Object {
                        "x": Array [
                          1800,
                          2020,
                        ],
                      }
        }
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "data": Object {
            "active": false,
            "array": Array [],
            "division": Object {},
          },
          "domain": Object {
            "x": Array [
              1800,
              2020,
            ],
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="expansible-scatter-row hidden"
>
           
          <ScatterRow
                    data={Array []}
                    domain={
                              Object {
                                        "x": Array [
                                          1800,
                                          2020,
                                        ],
                                      }
                    }
                    hidden={true}
                    title={undefined}
          />
           
</div>,
        "_debugID": 2,
        "_renderedOutput": <div
          className="expansible-scatter-row hidden"
>
           
          <ScatterRow
                    data={Array []}
                    domain={
                              Object {
                                        "x": Array [
                                          1800,
                                          2020,
                                        ],
                                      }
                    }
                    hidden={true}
                    title={undefined}
          />
           
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ExpansibleScatterRow
    data={
        Object {
            "active": false,
            "array": Array [],
            "division": Object {},
          }
    }
    domain={
        Object {
            "x": Array [
              1800,
              2020,
            ],
          }
    }
/>,
}
`;

exports[`ExpansibleScatterRow should render subcategories correctly 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <div
    className="expansible-scatter-row "
>
     
     
</div>,
  "nodes": Array [
    <div
      className="expansible-scatter-row "
>
       
       
</div>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <ExpansibleScatterRow
        data={
                Object {
                        "active": true,
                        "array": Array [],
                        "division": Object {},
                      }
        }
        domain={
                Object {
                        "x": Array [
                          1800,
                          2020,
                        ],
                      }
        }
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "data": Object {
            "active": true,
            "array": Array [],
            "division": Object {},
          },
          "domain": Object {
            "x": Array [
              1800,
              2020,
            ],
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <div
          className="expansible-scatter-row "
>
           
           
</div>,
        "_debugID": 4,
        "_renderedOutput": <div
          className="expansible-scatter-row "
>
           
           
</div>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <ExpansibleScatterRow
    data={
        Object {
            "active": true,
            "array": Array [],
            "division": Object {},
          }
    }
    domain={
        Object {
            "x": Array [
              1800,
              2020,
            ],
          }
    }
/>,
}
`;
